# sector-classification

./: .env.example  .gitignore  Makefile  README.md  REPORT.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  sectors.csv  setup.sh
dashboard/: index.html
data/: judge_classifications.csv  sector_keyword_overrides.json
data/embeddings/: sector_keywords_gemma4_v50.json  tag_keywords_crunchbase_v50.json  tag_keywords_openalex_v50.json  tag_keywords_regpat_v50.json
data/outputs/: crunchbase__v50.csv  openalex__v50.csv  regpat__v50.csv
figures/: crunchbase_3d.html  openalex_3d.html
notebooks/: 01_eda.ipynb
pipeline/: __init__.py  apply_overrides.py  overrides_openalex_v48.py  overrides_regpat_v49.py  overrides_regpat_v50.py  sector_overrides_v50.py
src/: cli.py  config.py  logging_setup.py
src/embeddings/: base.py  customtools_provider.py
src/io/: dropbox_client.py  local_cache.py
src/llm/: base.py  factory.py  openai_client.py  prompts.py  schemas.py  vllm_client.py
src/pipeline/: classify.py  dashboard.py  descriptions.py  embed_tags.py  judge.py  postprocess.py  ranking.py  runner.py  sectors.py  summary.py  trace.py
src/sources/: base.py  crunchbase.py  openalex.py  registry.py  regpat.py
src/utils/: batching.py  hashing.py  retry.py
tests/: conftest.py
tests/integration/: test_pipeline_tiny.py
tests/unit/: test_batching.py  test_hashing.py  test_judge.py  test_ranking.py
