[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sector-classification"
version = "0.1.0"
description = "Map Crunchbase / Regpat / OpenAlex tags to NACE sectors via embeddings + LLM."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
sector-classify = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"
pythonpath = ["."]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
